增强第三卷内容深度
第5章 synchronized：
- 新增 wait/notify 机制详解（while 循环、虚假唤醒、notify vs notifyAll、状态转换）

第6章 Lock/AQS：
- 新增 StampedLock 乐观读模式（三种模式、为什么快、不可重入限制）

第9章 线程池：
- 新增 ForkJoinPool 与工作窃取算法
- 补充 commonPool 陷阱（全局共享 + 阻塞操作 = 灾难）

第10章 并发模型：
- 补充 CompletableFuture 不传线程池的危险（commonPool 耗尽）

第11章 诊断：
- 新增虚拟线程诊断注意事项（Pinning 检测、ReentrantLock 替代、jstack 输出）